# TFUGA-AI7-TRISTAN2

./: MASTER_SYSTEM_INDEX.md  README.md  README_OMEGA_VTP_TENSORPROD_LIFT.md  THIRD_PARTY_NOTICES_OMEGA_OSS_DIGEST.md  omega_max_oak_report.json  pr_manifest.json  pyproject.omega-vtp-t.toml  pyproject.toml
omega_ai_tristan_lab/: README.md  omega_ai_manifesto.md  pyproject.toml
omega_ai_tristan_lab/benchmarks/: benchmark_manifest.md
omega_ai_tristan_lab/docs/: curriculum.md  theory_to_prototype.md  v0_2_ingestion_reporting.md
omega_ai_tristan_lab/examples/: run_lab.py  run_workspace_v02.py
omega_ai_tristan_lab/reports/: ip_report_template.md  oak_report_template.md  revenue_report_template.md
omega_ai_tristan_lab/tests/: test_core.py
omega_auto2_kernel/: CHANGELOG.md  M_MINUS_REPORT.md  OAK_REPORT.md  README.md  m_minus_registry.json  pyproject.toml
omega_auto2_kernel/docs/: AUTO2_THEORY.md  MAXCAP_CAPABILITY_MAP.md  OAKBENCH_MAXCAP.md  V0_2_SANDBOX_CI.md  V0_4_BENCH_REPORTS.md  V0_5_CANONICAL_BENCHMARKS.md  V0_7_REGRESSION_BENCHMARKS.md  V0_8_DIFF_SNAPSHOTS.md  V0_9_RELEASE_PIPELINE.md  V1_0_ORCHESTRATOR.md  V1_1_AUTO_GENESIS.md  V1_2_TASK_DRAFTS.md
omega_auto2_kernel/examples/: daily_briefing.yaml  github_factory.yaml  maxcap_assessment.yaml
omega_auto2_kernel/fixtures/: canonical_workflows.json  expected_diff_report.md  expected_genesis_report.json  expected_orchestrator_rc.json  expected_quality_gate.json  expected_release_pipeline.md  regression_policy.json  v0_6_canonical_bench.json  v0_7_canonical_snapshot.json
omega_auto2_kernel/omega_auto2/: __init__.py  bench.py  canonical.py  capabilities.py  cli.py  diff_report.py  exporters.py  friction.py  genesis.py  genesis_report.py  genesis_score.py  genesis_tree.py  improver.py  issue_draft.py  memory.py  models.py  oak_gate.py  orchestrator.py  proof.py  regression.py  release.py  report.py  sandbox.py  score_compare.py  snapshot.py  sovereignty.py  telemetry.py  workflow_synth.py
omega_auto2_kernel/reports/: ISSUE_86_OAK_M_MINUS.md
omega_auto2_kernel/schemas/: automation_genome.schema.yaml  oak_report.schema.yaml  workflow.schema.yaml
omega_auto2_kernel/tests/: test_bench_report.py  test_canonical_exporters.py  test_capabilities.py  test_cli.py  test_friction_score.py  test_genesis.py  test_issue_draft.py  test_oak_gate.py  test_orchestrator_sovereignty.py  test_proof_telemetry_improver.py  test_regression_compare.py  test_release_pipeline.py  test_sandbox.py  test_snapshot_diff.py
omega_game_t/: README.md  pyproject.toml
omega_game_t/docs/: CIRCUIT_DUNGEON_T.md  DEMO_FORGE_T.md  ENERGY_CIVILIZATION_T.md  FEEDBACK_LOOP_T.md  GAMEENGINEOS_T.md  GAMEMASTER_ACADEMY_T.md  GITHUB_REALM_ENGINE_T.md  GM_COUNCIL_T.md  ISSUE_FORGE_T.md  LANGUAGE_CURRICULUM_T.md  LANGUAGE_DATASET_FORGE_T.md  LANGUAGE_GM_RUBRIC_T.md  LANGUAGE_REPAIR_LOOP_T.md  LANGUAGE_VALIDATORS_T.md  LAUNCH_FORGE_T.md  OAKBENCH_GAME_T.md  OAK_GAME_PROTOCOL.md  OMEGA_GAME_T_MANIFESTO.md  OMEGA_GAME_T_PLUS_PLUS.md  POLYGLOT_LANGUAGE_ENGINE_T.md  PRODUCTIZER_T.md  PRODUCT_BENCH_T.md  REVENUE_FORGE_T.md  SCIENCE_SANDBOX_T.md  SPRINT_FORGE_T.md  THEORY_COMPILER_T.md  VERSION_FORGE_T.md
omega_game_t/omega_game/: __init__.py  core.py  cvcd.py  gm.py  gm_council.py  memory.py  oak.py  productizer.py  theory_compiler.py
omega_game_t/schemas/: circuit_door.schema.json  compiled_world.schema.json  demo_plan.schema.json  energy_colony.schema.json  event.schema.json  feedback_loop.schema.json  game_engine_state.schema.json  gamemaster_academy.schema.json  gm_vote.schema.json  issue_set.schema.json  language_curriculum.schema.json  language_dataset.schema.json  language_gm_evaluation.schema.json  language_repair_loop.schema.json  language_validation_report.schema.json  launch_draft.schema.json  oak_report.schema.json  oakbench_result.schema.json  polyglot_language_run.schema.json  product_bench.schema.json  product_plan.schema.json  quest_blueprint.schema.json  repo_world.schema.json  revenue_plan.schema.json  rule_genome.schema.json  simulation_result.schema.json  sprint_plan.schema.json  version_plan.schema.json  world_dna.schema.json  world_graph.schema.json
omega_game_t/tests/: test_boardgame_t.py  test_circuit_dungeon_t.py  test_demo_forge_t.py  test_energy_civilization_t.py  test_feedback_loop_t.py  test_gameengineos_t.py  test_gamemaster_academy_t.py  test_github_realm_t.py  test_gm_council_t.py  test_issue_forge_t.py  test_language_curriculum_t.py  test_language_dataset_forge_t.py  test_language_gm_rubric_t.py  test_language_repair_loop_t.py  test_language_validators_t.py  test_launch_forge_t.py  test_oakbench_game_t.py  test_omega_game_core.py  test_omega_game_t.py  test_polyglot_language_engine_t.py  test_product_bench_t.py  test_productizer_t.py  test_revenue_forge_t.py  test_science_sandbox_t.py  test_sprint_forge_t.py  test_theory_compiler_t.py  test_version_forge_t.py
omega_gov_qc_t/: README.md  pyproject.toml
omega_gov_qc_t/docs/: GOV_QC_V0_8_OAK_ISSUE_DRAFTS.md  GOV_QC_V0_9_BUNDLE_ISSUE_MAPPING.md  GOV_QC_V1_0_SEVERITY_REPORTS.md  GOV_QC_V1_0_SEVERITY_SNAPSHOTS.md
omega_gov_qc_t/examples/: municipal_demo_report.md  open_data_demo.csv  open_data_demo.json  product_cards.json  public_services_demo.json  qc_government_seed.json
omega_gov_qc_t/schemas/: dataset_record.schema.json  evidence_item.schema.json  gov_edge.schema.json  gov_node.schema.json  m_minus_event.schema.json  product_card.schema.json  public_service.schema.json  risk_tensor.schema.json  source_record.schema.json
omega_gov_qc_t/tests/: test_cli_report_graph_export.py  test_ingest_export_ci.py  test_oak_gate.py  test_oak_issue_bundle_mapper.py  test_oak_issue_generator.py  test_oak_issue_severity.py  test_registry_evidence_risk_report.py  test_service_product_minus.py
omega_info2_tristan/: README.md  pyproject.toml
omega_info2_tristan/docs/: adapters.md  chatgpt_oak_cli.md  chatgpt_oak_reporter.md  m_minus_chatgpt_oak.md  oak_report.md  theory.md
omega_info2_tristan/examples/: calibration_to_info2.json  (+2 more)
omega_infra_qc_t/: README.md  pyproject.toml
(+1816 files in other folders)
