[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omega-ai-tristan-lab"
version = "0.2.0"
description = "OAK-safe agentic AI laboratory for Tristan: ideas and documents to prototypes, reports, IP, and revenue maps."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary research scaffold / choose license before public reuse" }
authors = [{ name = "Tristan Tardif-Morency" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
pdf = ["pypdf>=4"]

[project.scripts]
omega-ai-tristan-lab = "omega_ai_tristan_lab.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
