[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omega-auto2-kernel"
version = "0.9.0"
description = "OAK-safe automation-of-automation prototype."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tristan Tardif-Morency" }]
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
auto2 = "omega_auto2.cli:main"

[tool.setuptools.packages.find]
include = ["omega_auto2*"]
exclude = ["tests*", "docs*", "examples*", "schemas*", "fixtures*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
