[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omega-gov-qc-t"
version = "0.1.0"
description = "OAK-safe GovTech prototype for TristanGovGraph Quebec"
requires-python = ">=3.10"
authors = [{ name = "Tristan-TM-Poly" }]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
