[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omega-infra-qc-t"
version = "0.1.0"
description = "OAK-safe InfrastructureGraph Quebec MVP"
requires-python = ">=3.10"
authors = [{ name = "Tristan-TM-Poly" }]
readme = "README.md"

[project.scripts]
omega-infra-qc = "omega_infra_qc_t.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
