[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rosette-tristan"
version = "0.1.8"
description = "Ω-ROSETTE-T: document to LaTeX, theory graph, code skeleton, absorption and OAK report."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Tristan"}]
dependencies = []

[project.optional-dependencies]
pdf = ["pymupdf>=1.24"]
render = ["matplotlib>=3.8"]
source = ["matplotlib>=3.8", "pymupdf>=1.24"]
dev = ["pytest>=8.0", "matplotlib>=3.8"]

[project.scripts]
rosette = "rosette_tristan.cli:main"
rosette-fidelity = "rosette_tristan.fidelity_pipeline:main"
rosette-hyper = "rosette_tristan.hyper_pipeline:main"
rosette-render = "rosette_tristan.latex_repair:main"
rosette-real-render = "rosette_tristan.real_render:main"
rosette-source-crop = "rosette_tristan.source_crop_compare:main"
rosette-visual-oak = "rosette_tristan.visual_oak:main"
rosette-bench = "rosette_tristan.bench_runner:main"
rosette-bench-corpus = "rosette_tristan.bench_corpus:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rosette_tristan*"]
