[project]
name = "omega-learn-t"
version = "0.1.0"
description = "Prototype Ω-LEARN-T / Apprentissage de Tristan"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tristan-TM-Poly" }]
license = { text = "Prototype research code" }
keywords = ["learning", "bayes", "cvcd", "oak", "memory", "tristan"]

[project.scripts]
omega-learn-t = "omega_learn_t.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
